--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -119,8 +119,11 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
+  min_sdk_android: 23
   remove_alpha_ios: true
-  image_path: "assets/images/edu.jpg"
+  image_path: "assets/icon/icon.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icon/icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -136,6 +139,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/icon/icon.png
     - assets/icons/bottom_nav_icon/
     - assets/icons/flags/
     - assets/icons/contact_us/
